--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -7,7 +7,7 @@
     "# Before your start:\n",
     "- Read the README.md file\n",
     "- Comment as much as you can and use the resources in the README.md file\n",
-    "- Happy learning!"
+    "- Happy learning"
    ]
   },
   {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2926\n"
+     ]
+    }
+   ],
    "source": [
     "def summation(num):\n",
-    "    # This function returns 1+2+3+....+num\n",
+    "    suma=0\n",
+    "    for i in range(num+1):\n",
+    "        suma += i\n",
+    "        \n",
+    "    return(suma)    \n",
+    "\n",
+    "print(summation(num))\n",
     "    \n",
-    "    # Your code here:"
+    "    "
    ]
   },
   {
@@ -60,33 +74,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def summation2(*args):\n",
-    "    # This function returns the sum of *args\n",
+    "def summation2(*args): \n",
+    "    return(sum(*args))\n",
     "    \n",
-    "    # Your code here:"
+    "summation2(array)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-6-e8498cf7fb17>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-e8498cf7fb17>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Now, do the same things with positional arguments\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "Now, do the same thing with positional arguments."
+    "Now, do the same things with positional arguments"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation3(a, b, c):\n",
-    "    # This function returns a+b+c\n",
-    "    \n",
-    "    # Your code here:"
+    "    return(a + b + c)\n",
+    "\n",
+    "summation3(*array)"
    ]
   },
   {
@@ -98,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,14 +154,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "57"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation4(**kwargs):\n",
-    "    # This function returns the sum of all M&Ms, except the red ones\n",
-    "    \n",
-    "    # Your code here:"
+    "    return sum(kwargs.values())-kwargs[\"red\"]\n",
+    "\n",
+    "summation4(**dictionary)"
    ]
   },
   {
@@ -126,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,11 +197,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "769"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def summation5(.....):\n",
+    "def summation5(*args,**kwargs):\n",
+    "    return sum(args)+sum(kwargs.values())\n",
+    "    \n",
+    "summation5(a,b,c,*d,**e)\n",
+    "    \n",
     "    # This function returns the sum of a,b,c,d and e\n",
     "    # You need to define the function input\n",
     "    # Your code here:"
@@ -160,17 +233,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We first define our iterator:\n",
     "\n",
@@ -183,17 +248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We continue to iterate through the iterator.\n",
     "\n",
@@ -202,38 +259,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(next(iterator))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "StopIteration",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-91070dc82d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mStopIteration\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# After we have iterated through all elements, we will get a StopIteration Error\n",
     "\n",
@@ -371,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
