--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2926\n"
+     ]
+    }
+   ],
    "source": [
     "def summation(num):\n",
-    "    # This function returns 1+2+3+....+num\n",
-    "    \n",
-    "    # Your code here:"
+    "    beginning = 0\n",
+    "    for a in range(num+1):\n",
+    "        beginning += a\n",
+    "    return(beginning)\n",
+    "print(summation(num))"
    ]
   },
   {
@@ -51,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,14 +70,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation2(*args):\n",
-    "    # This function returns the sum of *args\n",
-    "    \n",
-    "    # Your code here:"
+    "    return sum(args)\n",
+    "\n",
+    "summation2(*array)"
    ]
   },
   {
@@ -79,14 +100,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation3(a, b, c):\n",
     "    # This function returns a+b+c\n",
-    "    \n",
-    "    # Your code here:"
+    "    return (a + b + c)\n",
+    "\n",
+    "summation3(*array)"
    ]
   },
   {
@@ -98,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,14 +140,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation4(**kwargs):\n",
     "    # This function returns the sum of all M&Ms, except the red ones\n",
-    "    \n",
-    "    # Your code here:"
+    "    return sum(kwargs.values())-kwargs['red']\n",
+    "summation4(**dictionary)"
    ]
   },
   {
@@ -126,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,14 +183,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "769"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def summation5(.....):\n",
+    "def summation5(*args, **kwargs):\n",
     "    # This function returns the sum of a,b,c,d and e\n",
     "    # You need to define the function input\n",
-    "    # Your code here:"
+    "    return sum(args) + sum(kwargs.values())\n",
+    "\n",
+    "summation5(a,b,c,*d,**e)\n"
    ]
   },
   {
@@ -160,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +286,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-91070dc82d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-122-91070dc82d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mStopIteration\u001b[0m: "
      ]
     }
@@ -242,9 +299,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# We can also iterate through an iterator using a for loop like this:\n",
     "# Note: we cannot go back directly in an iterator once we have traversed through the elements. \n",
@@ -265,10 +332,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "iterator = iter([1,2,3])\n",
     "def divisible2(iterator):\n",
     "    # This function takes an iterable and returns the first element that is divisible by 2 and zero otherwise\n",
     "    # Input: Iterable\n",
@@ -277,8 +356,13 @@
     "    # Sample Input: iter([1,2,3])\n",
     "    # Sample Output: 2\n",
     "    \n",
-    "    # Your code here:\n",
-    "    "
+    "    for i in iterator:\n",
+    "        if i % 2 == 0:\n",
+    "            return i\n",
+    "        else:\n",
+    "            return 0\n",
+    "divisible2(iterator)\n",
+    "\n"
    ]
   },
   {
